# merula

./: .gitignore  Cargo.toml  README.md  TESTING.md  TODO.mr
data/: apps.mr  filter_periodic.mr  periodic.mr  tools.mr
doc/: comparison.md  goals.md
src/: display.rs  fex.pest  fex.rs  filter.rs  lib.rs  main.rs  memo.pest  memo.rs  mql.pest  mql.rs  node.rs  parser.rs  prelude.rs  sample.rs  value.rs
