[package]
name = "merula"
version = "0.1.0"
authors = ["nacl42 <code@sreblov.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
lazy_static = "1.4"
log = "0.4"
simplelog = "0.9"
pest = "2.1"
pest_derive = "2.1"
colored = "2"

